Content Generation, added new Concurrent param and respective integration
